# Heaven-Hell

./: .gitignore  AGENTS.md  Animation.cpp  Assets.cpp  Assets.h  Build.lua  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  Game.cpp  Game.h  Game.sln  Makefile  README.md  README2.md  Scene.cpp  Scene_Menu.cpp  Scene_Play.cpp  TODO.md  TextureManager.cpp  TextureManager.h  assets.txt  c_linux.txt  config.txt  context.md  damageTypes.cpp  game_save.txt  main.cpp  test.cpp  text.txt  vcpkg.json
App/: App.vcxproj  Build-App.lua
App/Source/: App.cpp
COMP4300/: Assets.h  Scene.cpp  Scene.h  Scene_Play.h
Core/: Build-Core.lua  Core.vcxproj  Core.vcxproj.filters  Makefile  assets.txt  config.txt  game_save.txt  text.txt
Core/Source/: Animation.cpp  Assets.cpp  Camera.cpp  CollisionManager.cpp  CollisionManager.hpp  ECS.cpp  Entity.cpp  Game.cpp  Level_Loader.cpp  Physics.cpp  Quadtree.cpp  Scene.cpp  Scene_GameOver.cpp  Scene_Inventory.cpp  Scene_Menu.cpp  Scene_Pause.cpp  Scene_Play.cpp  Sprite.cpp  Vec2.cpp  main.cpp  player.cpp
Core/Source/include/: Animation.h  Assets.h  Camera.h  CollisionManager.h  ComponentPool.hpp  Components.h  Components_new.h  ECS.hpp  Entity.h  Game.h  Level_Loader.h  Physics.h  Quadtree.h  Quadtree.hpp  Scene.h  Scene_Inventory.h  Scene_Menu.h  Scene_Pause.h  Scene_Play.h  ScriptableEntity.h  Sprite.h  Vec2.h
Core/Source/scripts/: player.cpp  projectile.cpp  rooter.cpp  weapon.cpp
Core/assets/aseprite/: Sprite-0002.aseprite  dwarf.aseprite  (+10 more)
Core/config_files/: assets.json  assets.txt  config.txt  game_save.json  game_save.txt  mobs.txt  test.json  text.txt
Source/: Assets.cpp  Camera.cpp  Scene_Inventory.cpp  Scene_Pause.cpp
Source/include/: Animation.h  Assets.h  ComponentPool.hpp
Source/scripts/: coin.cpp  npc.cpp  player.cpp  projectile.cpp
assets/: make8bitart.json
assets/aseprite/: coin.aseprite  default.msk  demon.aseprite  fireball.aseprite  first_house.aseprite  goblin.aseprite  grass_dual_sheet.aseprite  grass_dual_sheet_new_palette.aseprite  palette_test.aseprite  smallEnemy.aseprite  test.aseprite  wiz.aseprite
assets/pixel_studio_files/: New Player.psp  demo_tile_map.psp  fireball.psp  grass_dual_sheet.psp
classes/: CComponents.h  Entity.h  EntityManager.h
config_files/: assets.json  config.json  config.txt  dialogs.json  dual_sheets_atlas.json  game_save.json  game_save.txt  game_save_future_template.json  mobs.json  mobs.txt  quests.json  story.json  test.json
config_files/entities/: campfire.json  house.json  item.json  player.json  tree.json
config_files/items/: coin.json  emblem.json  goblin_claws.json  golem_fist.json  potion.json  rooter_claws.json  staff.json  sword.json
config_files/mobs/: chicken.json  dwarf.json  elf.json  goblin.json  golem.json  knight.json  rooter.json  wizard.json
config_files/pause_menu/: button_placement.json
doc/: BackendSetupRoadmap.md  OpenGLRenderBackend.md  TODO.md  WorldSpaceRendering.md  game_webpage.html
docs/: ScenePlayReviewRemaining.md  SessionTodo.md
headers/: Assets.h  CComponents.h  EntityManager.h  Game.h  Scene.h  Scene_Menu.h  Scene_Play.h  TextureManager.h  Vec2.h
scripts/: build-dual-sheets-atlas.py  package-release.ps1
src/: Animation.cpp  Assets.cpp  Camera.cpp  CollisionManager.cpp  ComponentPool.cpp  ECS.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  Level_Loader.cpp  Physics.cpp  RandomArray.cpp  Scene.cpp  Scene_Basic.cpp  Scene_GameOver.cpp  Scene_Inventory.cpp  Scene_Menu.cpp  Scene_Pause.cpp  Scene_Play.cpp  Sprite.cpp  StoryManager.cpp  Vec2.cpp  main.cpp  player.cpp  test.cpp
src/assets/: Animation.cpp  Animation.h  Assets.cpp  Assets.h  Assets.hpp  Sprite.cpp  Sprite.h  SpriteDefinition.cpp  SpriteDefinition.h  SpriteDefinition.hpp
src/core/: Action.cpp  Action.hpp  Game.cpp  Game.h  Game.hpp  InputCode.hpp  PixelImage.hpp  SDLPlatform.cpp  SDLPlatform.hpp
src/ecs/: ComponentFactory.hpp  ComponentPool.hpp  Components.h  Components.hpp  ECS.hpp  Entity.h  Entity.hpp  ScriptableEntity.h  ScriptableEntity.hpp  View.md  signaturePool.hpp
src/include/: Animation.h  Assets.h  CComponents.h  Camera.h  CollisionManager.h  Components copy.h  Components.h  ECS.h  ECS.hpp  ECS_old.h  Entity.h  EntityManager.h  Game.h  Level_Loader.h  Physics.h  RandomArray.h  Scene.h  Scene_Basic.h  Scene_GameOver.h  Scene_Menu.h  Scene_Play.h  ScriptableEntity.h  Sprite.h  StoryManager.h  TextureManager.h  Vec2.h
src/physics/: Camera.cpp  Camera.h  Camera.hpp  CollisionManager.cpp  CollisionManager.h  CollisionManager.hpp  InventoryManager.hpp  Level_Loader.cpp  Level_Loader.h  Level_Loader.hpp  Physics.cpp  Physics.h  Physics.hpp  Quadtree.cpp  Quadtree.h  Quadtree.hpp  RandomArray.cpp  RandomArray.hpp  Renderer.hpp  Vec2.cpp  Vec2.h  Vec2.hpp
src/render/: OpenGLRenderBackend.cpp  OpenGLRenderBackend.hpp  RenderBackend.h  RenderBackend.hpp  RenderDriver.hpp  RenderTypes.h  RenderTypes.hpp  SDLRenderBackend.cpp  SDLRenderBackend.h  SDLRenderBackend.hpp
src/scenes/: Scene.cpp  Scene.h  Scene.hpp  Scene_Finish.cpp  Scene_Finish.h  Scene_Finish.hpp  Scene_GameOver.cpp  Scene_GameOver.h  Scene_GameOver.hpp  Scene_Inventory.cpp  Scene_Inventory.h  Scene_Inventory.hpp  Scene_Menu.cpp  Scene_Menu.h  Scene_Menu.hpp  Scene_Pause.cpp  Scene_Pause.h  Scene_Pause.hpp  Scene_Play.cpp  Scene_Play.h  Scene_Play.hpp  TextBoxHelpers.hpp
src/scripts/: coin.cpp  house.cpp  npc.cpp  player.cpp  projectile.cpp  rooter.cpp  weapon.cpp
src/story/: EventBus.h  Quest.h  Quest.hpp  StoryManager.cpp  StoryManager.h  StoryManager.hpp  StoryQuest.h  StoryStep.h  story.json
story-lore/: 01-world-history.md  02-geography.md  03-factions-and-characters.md  04-story-progression.md  04.1-story-chapter-one.md  05-gameplay-lore-hooks.md  06-open-questions.md  07-review-and-feedback.md  08-posses-ability-reviewed.md  08-posses-ability.md  README.md
tests/: TestSupport.hpp  test_math.cpp
tests/ecs/: test_ecs.cpp
tests/random_array/: test_random_array.cpp
tests/render/: test_render_view.cpp
tests/sprite_definition/: test_sprite_definition.cpp
tests/vec2/: test_vec2.cpp
(+117 files in other folders)
